--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fast.js": "^0.1.1",
     "normalize.css": "^8.0.0",
     "polished": "^2.3.0",
     "react": "^16.6.0",
